# djvu-rs

./: .gitignore  BENCHMARKS.md  BENCHMARKS_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERF_EXPERIMENTS.md  README.md  RELEASING.md  SECURITY.md  SOURCES.md  cbindgen.toml  deny.toml  release-please-config.json
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-dashboard.yml  bench.yml  ci.yml  diff.yml  fuzz.yml  publish.yml  quality.yml  release-please.yml
benches/: codecs.rs  document.rs  render.rs
crates/djvu-bitmap/: Cargo.toml  README.md
crates/djvu-bitmap/src/: lib.rs
crates/djvu-bzz/: Cargo.toml  README.md
crates/djvu-bzz/src/: decode.rs  encode.rs  lib.rs
crates/djvu-iff/: Cargo.toml  README.md
crates/djvu-iff/src/: lib.rs
crates/djvu-iw44/: Cargo.toml  README.md
crates/djvu-iw44/src/: lib.rs
crates/djvu-jb2/: Cargo.toml  README.md
crates/djvu-jb2/src/: lib.rs
crates/djvu-pixmap/: Cargo.toml  README.md
crates/djvu-pixmap/src/: lib.rs
crates/djvu-zp/: Cargo.toml  README.md
crates/djvu-zp/src/: encoder.rs  lib.rs  tables.rs
dev/bench/: data.js
djvu-py/: Cargo.toml  README.md  pyproject.toml
djvu-py/src/: lib.rs
docs/: indirect-djvm-mutation.md
examples/: async_lazy_first_page.rs  diagnose_iw44_quality.rs  diff_djvulibre.rs  encode_quality_djbz.rs  encode_quality_iw44.rs  encode_quality_jb2.rs  extract_text.rs  info.rs  pdf_memory_probe.rs  probe_tiff_streaming_memory.rs  profile_iw44.rs  profile_iw44_encode.rs  render_page.rs
examples/ffi/: render.c
examples/wasm/: README.md  index.html  range_lazy.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_full/: chunk_length_overflow  duplicate_bg44  empty_djvm  fgbz_palette_overflow  huge_dimensions  iw44_dimension_mismatch  malformed_anta  nested_djvm  seed_bilevel  truncated_mid_chunk  txta_oob_coords  zero_dimensions
fuzz/corpus/fuzz_iff/: empty_form  odd_chunk  truncated_header  valid_single_page  wrong_magic  zero_length_chunk
fuzz/corpus/fuzz_iw44/: huge_dims  minimal_color  minimal_gray  zero_dims
fuzz/corpus/fuzz_jb2/: pseudo_random
fuzz/fuzz_targets/: fuzz_bzz.rs  fuzz_full.rs  fuzz_iff.rs  fuzz_iw44.rs  fuzz_jb2.rs
oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
scripts/: bench_compare.py  bench_djvulibre.sh  bench_wasm_simd128.mjs  bench_wasm_simd128.sh  djvulibre_bench.c  djvulibre_compare.py  fetch_corpus.sh
src/: annotation.rs  bitmap.rs  bzz.rs  bzz_encode.rs  bzz_new.rs  djvm.rs  djvu_async.rs  djvu_document.rs  djvu_encode.rs  djvu_mut.rs  djvu_render.rs  document.rs  epub.rs  error.rs  ffi.rs  fgbz_encode.rs  iff.rs  image_compat.rs  info.rs  iw44.rs  iw44_encode.rs  iw44_new.rs  jb2.rs  jb2_encode.rs  jb2_new.rs  lib.rs  metadata.rs  navm_encode.rs  ocr.rs  ocr_export.rs  ocr_neural.rs  ocr_onnx.rs  ocr_tesseract.rs  pdf.rs  pixmap.rs  render.rs  segment.rs  smmr.rs  text.rs  text_encode.rs  (+2 more)
src/legacy/: bitmap.rs  document.rs  error.rs  iw44.rs  jb2.rs  lib.rs  pixmap.rs
src/zp/: encoder.rs  mod.rs  tables.rs
src/zp_legacy/: mod.rs  tables.rs
tests/: cli_encode.rs  cli_info.rs  cli_ocr.rs  cli_render.rs  cli_render_format.rs  cli_text.rs  codec_bzz.rs  codec_jb2_iw44.rs  diff_tolerance.md  document_and_render.rs  epub_conversion.rs  generate_golden.sh  image_decoder.rs  ocr_export.rs  ocr_tesseract.rs  panic_free_corpus.rs  pdf_conversion.rs  phase4_annotations.rs  phase4_text.rs  proptest_codecs.rs  serde_roundtrip.rs
tests/corpus/: README.md  cable_1973_103353.djvu  conquete_paix.djvu  watchmaker.djvu
tests/fixtures/: ATTRIBUTION.md
tests/golden/bzz/: navm_fgbz_dirm.bzz  test_1byte.bzz  test_long.bzz  test_long.txt  test_short.bzz  test_short.txt
tests/golden/composite/: boy_jb2.ppm  boy_jb2_rot90.ppm  chicken.ppm
tests/golden/document/: djvu3spec_bundled_sizes.txt  navm_fgbz_sizes.txt
tests/golden/iff/: big_scanned_page.dump  boy.dump  boy_jb2.dump  carte.dump  chicken.dump  colorbook.dump  djvu3spec_bundled.dump  navm_fgbz.dump
tests/golden/iw44/: boy_bg.ppm  boy_bg_sub2.ppm  carte_bg.ppm  chicken_bg.ppm
tests/golden/jb2/: boy_jb2_mask.pbm  carte_p1_mask.pbm  djvu3spec_p1_mask.pbm  djvu3spec_p2_mask.pbm  navm_fgbz_p1_mask.pbm
tests/golden/text/: carte_p1.txt  colorbook_p1.txt  czech_p1.txt  czech_p6.txt  djvu3spec_p1.txt
tests/no_std_smoke/: Cargo.toml
tests/no_std_smoke/src/: lib.rs
