[package]
name = "djvu-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Python bindings for djvu-rs — pure-Rust DjVu decoder"
publish = false

[lib]
name = "djvu_rs_python"
crate-type = ["cdylib"]

[dependencies]
djvu-rs = { path = "..", features = ["std"] }
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.23"
