[package]
name = "djvu-py"
version = "0.11.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Python bindings for djvu-rs — pure-Rust DjVu decoder"
publish = false

[lib]
name = "djvu_rs_python"
crate-type = ["cdylib"]

[dependencies]
djvu-rs = { path = "..", features = ["std"] }
pyo3 = { version = "0.24", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.24"
