[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "djvu-rs"
version = "0.1.0"
description = "Python bindings for djvu-rs — pure-Rust DjVu decoder"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
numpy = ["numpy"]
pillow = ["Pillow"]

[tool.maturin]
features = ["pyo3/extension-module"]
